// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`confirm (isCI = false) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  yes?
│  ● Yes / ○ No
└
",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = false) > can cancel 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "■  foo
│  No
│",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = false) > can set initialValue 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ○ Yes / ● No
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  No",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = false) > left arrow moves to previous choice 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ○ Yes / ● No",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ● Yes / ○ No",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  Yes",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = false) > renders custom active choice 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● bleep / ○ No
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  bleep",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = false) > renders custom inactive choice 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● Yes / ○ bleep
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  Yes",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = false) > renders message with choices 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  Yes",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = false) > right arrow moves to next choice 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ○ Yes / ● No",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  No",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  yes?
│  ● Yes / ○ No
└
",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > can cancel 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "■  foo
│  No
│",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > can set initialValue 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ○ Yes / ● No
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  No",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > left arrow moves to previous choice 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ○ Yes / ● No",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ● Yes / ○ No",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  Yes",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > renders custom active choice 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● bleep / ○ No
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  bleep",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > renders custom inactive choice 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● Yes / ○ bleep
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  Yes",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > renders message with choices 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  Yes",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > right arrow moves to next choice 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ● Yes / ○ No
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ○ Yes / ● No",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  No",
  "
",
  "[?25h",
]
`;
